k8s/mongo-express.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  namespace: mongo-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:0.54
          ports:
            - name: mongo-express
              containerPort: 8081
          resources:
            limits:
              memory: 8Gi
              cpu: 1
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongo-database
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
    - name: mongo-express
      port: 8081
      protocol: TCP
      targetPort: 8081
      nodePort: 30000
