k8s/mongodb.yaml
# https://github.com/rohnux/Deployment-of-Mongodb-and-Mongo-Express-UI-on-Kubernetes/blob/master/k8s-commands
# 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: mongo-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4.0.4
        ports:
          - name: mongo-database
            containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongo-database
spec:
  selector:
    app: mongodb
  ports:
    - name: mongo-database
      port: 27017
      protocol: TCP
      targetPort: 27017
