k8s/oauth2proxy-github-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
        args:
          - --provider=github
          # - --github-org=<your-github-org>        # or --github-team=<team>
          # - --client-id=$(CLIENT_ID)
          # - --client-secret=$(CLIENT_SECRET)
          # - --cookie-secret=$(COOKIE_SECRET)
          - --email-domain=*
          # - --upstream=http://kubernetes-dashboard-kong-proxy.kubernetes-dashboard.svc.cluster.local:443/
          - --upstream=static://200
          - --http-address=0.0.0.0:4180
          # - --redirect-url=https://dashboard.local/oauth2/callback
        ports:
        - containerPort: 4180
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    app: oauth2-proxy

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  ingressClassName: custom-nginx
  rules:
  - host: dashboard.local
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180

---
# https://github.com/kubernetes/ingress-nginx/issues/1416
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_set_header X-Auth-Request-Email $auth_resp_x_auth_request_email;
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.kubernetes-dashboard.svc.cluster.local:4180/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://dashboard.local/oauth2/start?rd=$escaped_request_uri"
  name: external-auth-oauth2
  namespace: kubernetes-dashboard
spec:
  ingressClassName: custom-nginx
  rules:
  - host: dashboard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard-kong-proxy
            port:
              number: 443
